ft_container/test1/logs.txt
In file included from ../utilities_tests/iterator_traits.cpp:1:
In file included from ../utilities_tests/../system/system_methods.ipp:2:
In file included from ../utilities_tests/../system/lib.hpp:30:
../utilities_tests/../system/Alloc.hpp:55:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../utilities_tests/../system/Alloc.hpp:58:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../utilities_tests/../system/Alloc.hpp:164:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../utilities_tests/../system/Alloc.hpp:167:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../utilities_tests/iterator_traits.cpp:22:38: error: 'ft::vector<int>::iterator' (aka 'int *') is not a class, namespace, or enumeration
        res2.push_back(typeid(_vector<int>::iterator::iterator_category).name());
                                            ^
../utilities_tests/iterator_traits.cpp:23:38: error: 'ft::vector<int>::iterator' (aka 'int *') is not a class, namespace, or enumeration
        res2.push_back(typeid(_vector<int>::iterator::value_type).name());
                                            ^
../utilities_tests/iterator_traits.cpp:24:38: error: 'ft::vector<int>::iterator' (aka 'int *') is not a class, namespace, or enumeration
        res2.push_back(typeid(_vector<int>::iterator::difference_type).name());
                                            ^
../utilities_tests/iterator_traits.cpp:25:38: error: 'ft::vector<int>::iterator' (aka 'int *') is not a class, namespace, or enumeration
        res2.push_back(typeid(_vector<int>::iterator::iterator_type).name());
                                            ^
../utilities_tests/iterator_traits.cpp:26:38: error: 'ft::vector<int>::iterator' (aka 'int *') is not a class, namespace, or enumeration
        res2.push_back(typeid(_vector<int>::iterator::pointer).name());
                                            ^
../utilities_tests/iterator_traits.cpp:27:38: error: 'ft::vector<int>::iterator' (aka 'int *') is not a class, namespace, or enumeration
        res2.push_back(typeid(_vector<int>::iterator::reference).name());
                                            ^
4 warnings and 6 errors generated.
